--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.2"
+    "@braid/vue-formulate": "^2.4.5",
+    "firebase": "^8.0.2",
+    "vue": "^3.0.2",
+    "vue-router": "^3.4.9",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.8",
-    "@vue/compiler-sfc": "^3.0.2"
+    "@vue/compiler-sfc": "^3.0.2",
+    "tailwindcss": "^1.9.6",
+    "vite": "^1.0.0-rc.8"
   }
 }
